fix: app-root not centered

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,5 +13,6 @@
 
   @include desktop {
     padding: 64px 0;
+    justify-content: center;
   }
 }
